<resources>
    <string name="app_name">Vindiquiz</string>
    <string name="text_one">How much do you know</string>
    <string name="text_two">about:</string>
    <string name="name">Name:</string>
    <string name="header_image">Header image</string>
    <string name="first_question">I. In which of the following maps can you enhance your gear?</string>
    <string name="text_three">Find out in the Quiz below!</string>
    <string name="edit_text">Enter Your Name Here</string>
    <string name="rocheste_image">Rocheste image</string>
    <string name="rocheste_checkbox">Rocheste (Season I map)</string>
    <string name="colheln_image">Colheln image</string>
    <string name="colheln_checkbox">Colheln (Season I map)</string>
    <string name="malina_image">Malina image</string>
    <string name="malina_checkbox">Malina (Season II map)</string>
    <string name="berbhe_image">Berbhe image</string>
    <string name="berbhe_checkbox">Berbhe (Season III map)</string>
    <string name="second_quesiton">II. Which of the following rates of success at enhancing do you think they have implemented after the Rise update? (Before Rise, you could have not enhance your weapon over +15. After Rise, you could enhance them until +20 and we reffer about enhancing your weapon from +15 to +16)</string>
    <string name="forty_radiobutton">40%</string>
    <string name="thirtyfour_radiobutton">34%</string>
    <string name="nineteen_radiobutton">19%</string>
    <string name="fourteen_radiobutton">14%</string>
    <string name="plussixteen_image">+16 image</string>
    <string name="third_question">III. How many people from EU server tried to enhance their +15 to +16 after Rise?</string>
    <string name="gif_image">Gif image</string>
    <string name="five_radiobutton">5</string>
    <string name="ten_radiobutton">10</string>
    <string name="thirty_radiobutton">30</string>
    <string name="fivty_radiobutton">50</string>
    <string name="fourth_question">IV. How many people do you think that succeeded enhancing to +16?</string>
    <string name="oneortwo_people">One or two people.</string>
    <string name="twoorthree_people">Two or three people.</string>
    <string name="threeorfour_people">Three or four people..</string>
    <string name="fourorfive_people">Four or five people.</string>
    <string name="fifth_question">V. Which one of the following do you think is the name of the following character in EU? (newest INT based character implemented in Vindictus)</string>
    <string name="hagie_gif">Hagie gif</string>
    <string name="sylas_checkbox">Sylas</string>
    <string name="hagie_checkbox">Hagie</string>
    <string name="evie_checkbox">Evie</string>
    <string name="hurk_checkbox">Hurk</string>
    <string name="next_page">Next</string>
    <string name="previous_page">Previous</string>
    <string name="summary_result">Quiz result</string>
    <string name="score_summary">Score</string>
    <string name="reset_score">Take quiz again</string>
    <string name="sixth_question">VI. In which year do you think Vindictus was released in Europe?</string>
    <string name="submitAnswer">Submit</string>
</resources>
