<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/brick">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="19dp"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/third_question"
            android:textColor="#FFFFFF"
            android:textSize="19sp"
            android:textStyle="bold"
            tools:targetApi="jelly_bean"
            tools:text="III. How many people from EU server tried to enhance their +15 to +16 after Rise?" />

        <RadioGroup
            android:id="@+id/RGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical">


            <RadioButton
                android:id="@+id/five"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:text="@string/five_radiobutton"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                tools:text="5" />

            <RadioButton
                android:id="@+id/ten"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:text="@string/ten_radiobutton"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                tools:text="10" />


            <RadioButton
                android:id="@+id/twenty"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:text="@string/thirty_radiobutton"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                tools:text="30" />

            <RadioButton
                android:id="@+id/fivty"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:text="@string/fivty_radiobutton"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                tools:text="50" />
        </RadioGroup>

        <ImageView
            android:id="@+id/sixteen_gif"
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:contentDescription="@string/gif_image"
            app:srcCompat="@drawable/sixteen_gif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/previousPage"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#000000"
                android:text="@string/previous_page"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/nextPage"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:text="@string/next_page"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>